--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"api-easy": "0.3.8"
 	},
 	"devDependencies": {
-	    "director": "~1.0.3"
+	    "director": "~1.0.3",
+	    "vows": "0.6.x"
 	},
 	"scripts": {
 		"test": "vows test/*-test.js"
